<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        android:layout_marginTop="20dp"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <Button
        android:id="@+id/btn_login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/signin_email"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_pw" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signin_google"
        android:text="@string/signin_google"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/btn_login_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signin_facebook"
        android:text="@string/signin_facebook"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/btn_login_google"
        app:layout_goneMarginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_twitter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signin_twitter"
        android:text="@string/signin_twitter"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/btn_login_facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>